tests/specs/class_method_overloads.txt
# mod.ts
export class A {
      a(b: string): string;
      a(b: number): number;
      a(b: string | number): string | number {}
    }

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export class A {
  | ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:2:7
  | 
2 |       a(b: string): string;
  |       ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:3:7
  | 
3 |       a(b: number): number;
  |       ^

# output.txt
Defined in file:///mod.ts:0:1

class A

  a(b: string): string
  a(b: number): number


# output.json
{
  "symbols": [
    {
      "name": "A",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 0,
            "col": 0,
            "byteIndex": 0
          },
          "declarationKind": "export",
          "kind": "class",
          "def": {
            "isAbstract": false,
            "constructors": [],
            "properties": [],
            "indexSignatures": [],
            "methods": [
              {
                "accessibility": null,
                "optional": false,
                "isAbstract": false,
                "isStatic": false,
                "name": "a",
                "kind": "method",
                "functionDef": {
                  "params": [
                    {
                      "kind": "identifier",
                      "name": "b",
                      "optional": false,
                      "tsType": {
                        "repr": "string",
                        "kind": "keyword",
                        "value": "string"
                      }
                    }
                  ],
                  "returnType": {
                    "repr": "string",
                    "kind": "keyword",
                    "value": "string"
                  },
                  "isAsync": false,
                  "isGenerator": false,
                  "typeParams": []
                },
                "location": {
                  "filename": "file:///mod.ts",
                  "line": 1,
                  "col": 6,
                  "byteIndex": 23
                }
              },
              {
                "accessibility": null,
                "optional": false,
                "isAbstract": false,
                "isStatic": false,
                "name": "a",
                "kind": "method",
                "functionDef": {
                  "params": [
                    {
                      "kind": "identifier",
                      "name": "b",
                      "optional": false,
                      "tsType": {
                        "repr": "number",
                        "kind": "keyword",
                        "value": "number"
                      }
                    }
                  ],
                  "returnType": {
                    "repr": "number",
                    "kind": "keyword",
                    "value": "number"
                  },
                  "isAsync": false,
                  "isGenerator": false,
                  "typeParams": []
                },
                "location": {
                  "filename": "file:///mod.ts",
                  "line": 2,
                  "col": 6,
                  "byteIndex": 51
                }
              },
              {
                "accessibility": null,
                "optional": false,
                "isAbstract": false,
                "isStatic": false,
                "name": "a",
                "kind": "method",
                "functionDef": {
                  "params": [
                    {
                      "kind": "identifier",
                      "name": "b",
                      "optional": false,
                      "tsType": {
                        "repr": "",
                        "kind": "union",
                        "value": [
                          {
                            "repr": "string",
                            "kind": "keyword",
                            "value": "string"
                          },
                          {
                            "repr": "number",
                            "kind": "keyword",
                            "value": "number"
                          }
                        ]
                      }
                    }
                  ],
                  "returnType": {
                    "repr": "",
                    "kind": "union",
                    "value": [
                      {
                        "repr": "string",
                        "kind": "keyword",
                        "value": "string"
                      },
                      {
                        "repr": "number",
                        "kind": "keyword",
                        "value": "number"
                      }
                    ]
                  },
                  "hasBody": true,
                  "isAsync": false,
                  "isGenerator": false,
                  "typeParams": []
                },
                "location": {
                  "filename": "file:///mod.ts",
                  "line": 3,
                  "col": 6,
                  "byteIndex": 79
                }
              }
            ],
            "extends": null,
            "implements": [],
            "typeParams": [],
            "superTypeParams": []
          }
        }
      ]
    }
  ]
}
